fixed images not showing up in Chrome

--- a/index.css
+++ b/index.css
@@ -60,8 +60,24 @@ footer > .social-media-links {
 }
 
 
+/* #grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  column-gap: 20px;
+  margin: 20px;
+}
 
-#grid-container {
+#grid-container > img {
+  width: 100%;
+}
+ */
+
+
+
+
+
+
+ #grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
   column-gap: 40px;
@@ -71,9 +87,11 @@ footer > .social-media-links {
 
 #grid-container > img {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   border: 10px solid rgb(25, 37, 62);
   box-sizing: border-box;
+  object-fit: cover;
+  align-self: stretch;
 }
 
 .text {
@@ -98,4 +116,4 @@ footer > .social-media-links {
 
 .button:hover {
   background-color: rgba(149,26,47);
-}
+} 
